test/sematic/resources/positive/basic_funcall2.tig
let
    function f(a:int, b:int, c:string):string = (a := b; c)
in
    f(1 + 3 / 12 & 3, "5" <> "2", "3")
end